samples/_failures_safe/1761170820_3b3f71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa682f4c.c: In function ‘main’:
./samples/SAFE/__tmp_aa682f4c.c:170:5: error: expected expression at end of input
  170 |     TokenList* tokens =
      |     ^~~~~~~~~
./samples/SAFE/__tmp_aa682f4c.c:170:5: error: expected declaration or statement at end of input
